css/style.css
/* ... */
.content-box-md {
    padding: 100px 0;
}

.content-box-sm {
    padding: 90px 0;
}

/* =========================================
        Vertical/Horizontal Headings
============================================ */

.vertical-heading h5 {
    color: #b40381;
    font-size: 14px;
    font-weight: 500;
    text-transform: uppercase;
    word-spacing: 9px;
    display: inline-block;
    -webkit-transform: rotate(-90deg);
    transform: rotate(-90deg);
    position: relative;
    top: 60px;
    left: -53px;
}

.vertical-heading h2 {
    margin: 0 0 0 35px;
}

.horizontal-heading h2,
.vertical-heading h2 {
    font-size: 42px;
    font-weight: 100;
    line-height: 45px;
}

.horizontal-heading {
    margin-bottom: 80px;
}

.horizontal-heading h5 {
    font-size: 16px;
    color: #b40381;
    text-transform: uppercase;
    display: inline-block;
    margin-bottom: 10px;
}

.horizontal-heading h2 {
    margin: 0;
}

/* =========================================
                About 01
============================================ */

#about-right p:first-child {
    margin-bottom: 30px;
}

#about-right p {
    font-size: 17px !important;
}

/* 
#about-bottom {
	margin-top: 60px;
} */

#about-bottom img {
    margin: 0 auto;
    /* width: 550px */
    width: 75%;
}

/* =========================================
                About 02
============================================ */

#about-02 {
    background-color: #f4f4f4;
}

.about-item {
    background-color: #fff;
    padding: 80px 30px;
    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, .1);
    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
    /* height: 100vh; */
}

@media only screen and (max-width: 767px) {
    .about-item {
        /* background-color: #fff; 
		 padding: 80px 30px; 
		 -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, .1); 
		 box-shadow: 0 0 10px rgba(0, 0, 0, .1); 
		 height: 60vh;  */
    }
}

.about-item i {
    font-size: 42px;
    margin: 0;
}

.about-item h3 {
    font-size: 24px;
    margin-bottom: 10px;
}

.about-item hr {
    width: 45px;
    height: 3px;
    background-color: #b40381;
    margin: 0 auto;
    border: none;
}

.about-item p {
    margin-top: 20px;
}

.about-item ul {
    text-align: left;
    margin-left: -30px;
    margin-top: 20px;
    font-family: "Open Sans", sans-serif;
    font-size: 13px;
    font-weight: 400;
    line-height: 24px;
}

/* @media only screen and (min-width: 767px) {
    .about-item p {
    font-size: 11px;
    }
}

@media only screen and (min-width: 1000px) {
    .about-item p {
    font-size: 13px;
    }
} */

.daily-schedule-headline {
    color: #b40381;
}

.morning {
    margin-bottom: 120px;
}

/* Hover state */

.about-item:hover {
    background-color: #b40381;
}

.about-item:hover i,
.about-item:hover h3,
.about-item:hover p {
    color: #fff;
}

.about-item:hover hr {
    background-color: #fff;
}

.about-item:hover i {
    transform: translateY(-20px);
}

.about-item:hover strong {
    color: #fff;
}

.about-item:hover li {
    color: #fff;
}

.about-item:hover h4 {
    color: #fff;
}

/* Smooth transition */

.about-item,
.about-item i,
.about-item hr {
    -webkit-transition: all 400ms ease-in-out;
    transition: all 400ms ease-in-out;
}

.about-item h3,
.about-item p {
    -webkit-transition: all 400ms linear;
    transition: all 400ms linear;
}

/* =========================================
                Another About Item
============================================ */

#about-02 {
    background-color: #f4f4f4;
}

.about-item2 {
    background-color: #fff;
    padding: 80px 30px;
    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, .1);
    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
    /* height: 100vh; */

}

.about-item2 i {
    font-size: 42px;
    margin: 0;
}

.about-item2 h3 {
    font-size: 24px;
    margin-bottom: 10px;
}

.about-item2 hr {
    width: 45px;
    height: 3px;
    background-color: #b40381;
    margin: 0 auto;
    border: none;
}

.about-item2 p {
    margin-top: 20px;
}

.about-item2 ul {
    text-align: left;
    margin-left: -30px;
    margin-top: 20px;
    font-family: "Open Sans", sans-serif;
    font-size: 13px;
    font-weight: 400;
    line-height: 24px;
}

/* @media only screen and (min-width: 767px) {
    .about-item2 li {
    font-size: 11px;
    }
}

@media only screen and (min-width: 1000px) {
    .about-item2 li {
    font-size: 13px;
    }
} */

/* Hover state */

.about-item2:hover {
    background-color: rgb(90, 193, 245);
}

.about-item2:hover strong {
    color: #1f263b;
}

.about-item2:hover i,
.about-item2:hover h3,
.about-item2:hover p {
    color: #fff;
}

.about-item2:hover hr {
    background-color: #fff;
}

.about-item2:hover i {
    transform: translateY(-20px);
}


.about-item2:hover li {
    color: #fff;
}

.about-item2:hover h4 {
    color: #fff;
}

.about-item2:hover li {
    color: #fff;
}

/* Smooth transition */

.about-item2,
.about-item2 i,
.about-item2 hr {
    -webkit-transition: all 400ms ease-in-out;
    transition: all 400ms ease-in-out;
}

.about-item2 h3,
.about-item2 p,
.about-item2 li,
.about-item2 strong {
    -webkit-transition: all 400ms linear;
    transition: all 400ms linear;
}

/* ===================================================================================
*/


#about-03 {
    background-color: #f4f4f4;
}

.about-item3 {
    background-color: #fff;
    padding: 80px 30px;
    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, .1);
    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
    /* height: 100vh; */
}

.about-item3 i {
    font-size: 42px;
    margin: 0;
}

.about-item3 h3 {
    font-size: 24px;
    margin-bottom: 10px;
}

.about-item3 hr {
    width: 45px;
    height: 3px;
    background-color: #b40381;
    margin: 0 auto;
    border: none;
}

.about-item3 p {
    margin-top: 20px;
}

.about-item3 ul {
    text-align: left;
    margin-left: -30px;
    margin-top: 20px;
    font-family: "Open Sans", sans-serif;
    font-size: 13px;
    font-weight: 400;
    line-height: 24px;
}
/* ... */

